Refactorizacion metodos consultas especificas de la habitacion